--- a/compose.yaml
+++ b/compose.yaml
@@ -17,6 +17,8 @@ services:
     environment:
       COMPOSER_MEMORY_LIMIT: 2G
     working_dir: '/var/www/html'
+    depends_on:
+      - database
     extra_hosts:
       # for step debugging with Xdebug
       - 'host.docker.internal:host-gateway'
@@ -34,7 +36,7 @@ services:
         - '.:/var/www/html'
         - './docker/nginx/conf.d/default.nginx:/etc/nginx/conf.d/default.conf'
   database:
-    image: postgres:${POSTGRES_VERSION:-16}-alpine
+    image: postgres:${POSTGRES_VERSION:-14.11}-alpine
     environment:
       POSTGRES_DB: ${POSTGRES_DB:-users}
       # You should definitely change the password in production
