--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=35d835b3971cf48c30cb8760635e2a4c
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgres://admin:SXpr4qEcUwN3vvm6N7goZbUTRZeqbE7a@dpg-coqcdi779t8c738e9b90-a/users_6sfe"
+DATABASE_URL="postgres://admin:SXpr4qEcUwN3vvm6N7goZbUTRZeqbE7a@dpg-coqcdi779t8c738e9b90-a.frankfurt-postgres.render.com/users_6sfe"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
