--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,10 @@
         "symfony/ux-turbo": "^2.17",
         "symfony/validator": "7.0.*",
         "symfony/web-link": "7.0.*",
+        "symfony/webpack-encore-bundle": "*",
         "symfony/yaml": "7.0.*",
+        "symfony/ux-chartjs": "^2.17",
+        "symfonycasts/sass-bundle": "^0.6.0",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
